// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default state 1`] = `
Object {
  "clickedButtonIndex": null,
  "data": null,
  "show": false,
}
`;

exports[`handles HIDE_TABLE_OF_CONTENTS 1`] = `
Object {
  "clickedButtonIndex": null,
  "data": null,
  "show": false,
}
`;

exports[`handles SHOW_TABLE_OF_CONTENTS 1`] = `
Object {
  "clickedButtonIndex": null,
  "data": null,
  "show": true,
}
`;

exports[`handles UPDATE_TABLE_OF_CONTENTS 1`] = `
Object {
  "clickedButtonIndex": null,
  "data": Array [
    Object {
      "href": "item-1.html",
      "title": "item 1",
    },
    Object {
      "href": "item-2.html",
      "title": "item 2",
    },
  ],
  "show": false,
}
`;
